--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -731,7 +731,11 @@
 
 > 執大象 天下往 往而不害 安平大
 
+大象之所在，宇宙都会被其吸引而去，吸引而去却不会招致伤害，这是大平安。
+
 > 樂與餌 過格止
+
+对于诱惑的满足与欢乐，在超过一定层次后不复存在。
 
 > 故道之出言也 曰淡呵亓无味也 視之不足見也 聽之不足聞也 用之不可既也
 
