--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -791,6 +791,8 @@
 
 > 將欲取天下也 恆无事 及亓有事也 不足以取天下
 
+打算获得宇宙，就永远不可能有事。如果有事，就不足以获得宇宙。
+
 <div style="text-align: right;">释<i>有事、上有以爲</i> 40-75</div>
 
 > 人之饑也 以亓取食稅之多也 是以飢
