--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -749,7 +749,17 @@
 
 > 上士聞道 堇而行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
 
+上等的士听到基于道而来的内容，践行基于道的指点，但真正的行动很少；中等的士听到基于道而来的内容，偶尔会听进去极少的一点点，但几乎接近于没听到；下等的士听到基于道而来的内容，对此哈哈大笑，完全作为一种可笑的大笑话。
+
+```
+「堇」：稀少。
+- 「聞道者日損 損之又損 以至於无爲」
+- 因此，真正的行动是很少的。
+```
+
 > 是以建言有之曰 明道如費 進道如退 夷道如纇 上德如浴 大白如辱 廣德如不足 建德如偷 質真如渝 大方无隅 大器免成 大音希聲 天象无形 道殷无名
+
+因此，有这么一种说法：在道的知识上了解如同不了解；在道的知识上增进如同减退；在道的知识上通透如同费解；上等的德如同渊谷；彻底的干净如同污浊；广泛的德如同狭隘；构造的德如同抄袭；质地本真如同变质；彻底的方如同没有角落；宇宙中的大能工具是现成的；宇宙中的大能信息是人类几乎没有能力接收的；宇宙层面的象的出现是无法通过物质捕捉到的；道浓密的所在是没有名字的。
 
 > 夫唯道 善始且善成
 
