--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -807,11 +807,30 @@
 
 > 人之饑也 以亓取食稅之多也 是以飢
 
+人遭受饥饿，是因为其承担的食物抽税的比例高，才会导致遭受饥饿。
+
 > 百姓之不治也 以亓上有以爲也 是以不治
+
+百姓不平静，是因为其所处的统治系统有所图，才会导致不平静。
 
 > 民之輕死 以亓求生之厚也 是以輕死
 
+民不看重自己所面对的死亡风险，是因为其猛烈地追求自己的生路，才会导致不看重自己所面对的死亡风险。
+
 > 夫唯无以生爲者 是賢貴生
+
+只有以生存、生路为目标而行动的人们不存在，才是以生为贵作为贤能的表现。
+
+```
+「以生爲」：以生存、生路为目标的行动。
+- 呼应「求生」。
+
+「无以生爲」
+- 对应「求生之厚」。
+- 求生之泊。
+
+「貴生」对应「輕死」。
+```
 
 <div style="text-align: right;">26-63</div>
 
