--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -420,7 +420,11 @@
 
 > 道之尊也 德之貴也 夫莫之爵也 而恆自然也
 
+道的崇高位置，德的上等价值，都不是被赋予的，而是不变的自身属性。
+
 > 道生之 畜之 長之 遂之 亭之 毒之 養之 覆之
+
+道产生、保育、成长、完成、停止、伤害、消化残余、终结。
 
 ```
 正向、生成阶段，以正向由始至成阶段排序：
@@ -431,17 +435,20 @@
 到达正向极限点：
 - 「亭」：停止。
 反向、弱化阶段，以反向由始至成阶段排序：
-- 「毒」：损害。
+- 「毒」：伤害。
 - 「養」：消化残余。
 - 「覆」：终结。
 ```
 
 > 生而弗有也 爲而弗恃也 長而弗宰也 此之謂玄德
 
+产生却不占有；行动却不依赖于行动；成长却不主宰。这指的就是玄德，即放之任何粒度、层面与维度都符合道的方式的基于道的范式。
+
 ```
 「生而弗有也 爲而弗恃也 長而弗宰也」
 - 对应上一段「道生之 畜之 長之」的顺序。
 - 因此，「爲」对应的是「畜」。
+
 「爲」：
 - 具象指代「畜」。
 - 由具象变换到抽象指代动作、行为。
