--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -869,11 +869,19 @@
 
 > 小邦寡民
 
+小邦及不多的民。
+
 > 使十百人之器毋用 使民重死而遠徙 有車周无所乘之 有甲兵无所陳之 使民復結繩而用之
+
+让数十上百人可用的工具失去其用途；让民因为重视死亡而迁徙到遥远的地方；有交通工具却没有地方可以去；有武器却没地方放；让民重新采用原始的方式做事。
 
 > 甘亓食 美亓服 樂亓俗 安亓居
 
+满意其饮食；得意其装束；享受其文化；不担心其环境。
+
 > 鄰邦相望 雞狗之聲相聞 民至老死 不相往來
+
+相邻的邦与其可以互相看得到、鸡与狗的叫声互相听得到，民与外邦的民之间一直到老死，都不会互相有来往。
 
 <div style="text-align: right;">释<i>治大國、立天下</i> 23-60</div>
 
