完成 26-63 解释，「猶」更正为「猷」

--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -843,9 +843,11 @@
 
 > 爲无爲 事无事 味无味
 
+采取的行动是不采取行动；实现的目标是没有目标；体验到的是体验不到。
+
 > 大小多少 報怨以德
 
-用上等的基于规律的方法回应怨。
+根据精确的质量与数量，用上等的基于规律的方法回应怨。
 
 > 圖難乎亓易也 爲大乎亓細也 天下之難作於易 天下之大作於細
 
@@ -853,9 +855,19 @@
 
 > 是以聖人終不爲大 故能成亓大
 
+因此，圣人归根结底一直不在大的维度有所动作，所以才能实现其在大的维度上的效果。
+
 > 夫輕諾必寡信 多易必多難
 
-> 是以聖人猶難之 故終於无難
+没有分量的承诺等于没有分量的信用。容易的量大等于困难的量大。
+
+> 是以聖人猷難之 故終於无難
+
+因此，圣人深谋远虑地把容易的视为困难，所以才会一直没有困难。
+
+```
+「猷」：表示与谋略相关。
+```
 
 <div style="text-align: right;">释<i>聖人之治</i> 47-3</div>
 
