--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -873,9 +873,15 @@
 
 > 不上賢 使民不爭 不貴難得之貨 使民不爲盜 不見可欲 使民不亂
 
+不推崇贤能，导致民不竞争；不推崇稀有的事物，导致民不惦记不是自己的事物；不显露可以勾起欲望的，导致民不被欲望激发而招致波动。
+
 > 是以聖人之治也 虛亓心 實亓腹 弱亓志 強亓骨
 
+因此，圣人的治民：排空其心中的欲望，充实其必需的营养，抑制其欲望的强度，坚固其支撑的基础。
+
 > 恆使民无知无欲也 使夫知不敢 弗爲而已 則无不治矣
+
+不变的是实现民没有勾起欲望的知识、没有欲望、了解欲望的危险而以欲望为死地，一直到生命终结都不进入欲望的死地，那么，就不会有不治的存在。
 
 <div style="text-align: right;">释<i>小邦</i> 30-80</div>
 
