完成 「天、天下、地、天之道 / 天道、天下之道」释意

--- a/道德经溯源本/texts/道德经溯源本字词释意.md
+++ b/道德经溯源本/texts/道德经溯源本字词释意.md
@@ -49,6 +49,25 @@
 
 ## 天
 
+- 抽象指代：人类可感知、想象却无法涉及的环境
+
+## 天下
+
+- 抽象指代：人类可感知、想象并能够涉及的环境
+    - 「天下」由「天」衍生及规约
+
+## 地
+
+- 抽象指代：人类可感知、想象且有可能依托其而活动的环境
+
+## 天之道 / 天道
+
+- 人类可感知、想象却无法涉及的环境中的方式
+
+## 天下之道
+
+- 人类可感知、想象并能够涉及的环境中的规律范式
+
 ## 利
 
 ## 害
