--- a/道德经溯源本/texts/道德经溯源本字词释意.md
+++ b/道德经溯源本/texts/道德经溯源本字词释意.md
@@ -17,6 +17,10 @@
 - 得意
 - 使…得意
 
+## 惡
+
+- 避之不及的
+
 ## 知
 
 - 了解
@@ -68,6 +72,10 @@
 
 - 人类可感知、想象并能够涉及的环境中的规律范式
 
+## 人之道
+
+- 人类系统中的方式
+
 ## 利
 
 - 满足需求
@@ -96,6 +104,24 @@
 
 - 毫无控制的心理需求、了解天外、天、天下结构及基于此的方法范式、抽象思维导向、与人类形成某种利益关联的长久智慧体
 
-## 天之道
+## 訾
 
-## 人之道
+- 盘算
+
+## 生
+
+- 产生
+
+## 成
+
+- 实现
+
+## 音
+
+- 信号中的信息
+
+## 聲
+
+- 信号
+
+
