完成「恆、常、和、同」释意

--- a/道德经溯源本/texts/道德经溯源本字词释意.md
+++ b/道德经溯源本/texts/道德经溯源本字词释意.md
@@ -124,4 +124,23 @@
 
 - 信号
 
+## 恆
+
+- 不变
+
+## 常
+
+- 存在中断的不变
+
+## 和
+
+- 融所有入不现而出另
+  - 融所有：混合原本维度中的所有
+  - 入不现：在原本维度中，混合的效果是进入原本维度中的所有虽然仍然存在却无一显现（最低限度：不凸显）
+  - 出另：在新的维度中，混合的效果是产生出与之前维度中不同的另外的存在
+
+## 同
+
+- 归一
+
 
