完成「罪、禍、咎、足、憯」释意

--- a/道德经溯源本/texts/道德经溯源本字词释意.md
+++ b/道德经溯源本/texts/道德经溯源本字词释意.md
@@ -164,3 +164,25 @@
 
 - 离开
 
+## 罪
+
+- 罪孽
+- 顶级：激发欲望滋生
+
+## 禍
+
+- 灾祸
+- 顶级：不知道满足
+
+## 咎
+
+- 罪责
+- 顶级：追求获取的欲望
+
+## 足
+
+- 达到填满所需求量的状态
+
+## 憯
+
+- 惨痛
