完成「寳、注、市、賀、尊、貴、進、退」释意

--- a/道德经溯源本/texts/道德经溯源本字词释意.md
+++ b/道德经溯源本/texts/道德经溯源本字词释意.md
@@ -186,3 +186,43 @@
 ## 憯
 
 - 惨痛
+
+## 寳
+
+- 马王堆帛书甲中所用汉字：U+24A37
+- 保住（珍贵的对象）
+- 珍贵的对象
+
+## 注
+
+- 产生所需的主要的且有如水般的元素
+- 「水…幾於道」
+
+## 市
+
+- 促成交换、交易的效用
+
+## 賀
+
+- 提升在他人心中价值的效用
+
+## 尊
+
+- 地位崇高
+
+## 貴
+
+- 推崇
+
+## 進
+
+- 在…上获得增长
+
+## 退
+
+- 在…上遭受衰减
+
+
+
+
+
