完成「餘、賢、弱、強、動、用」释意

--- a/道德经溯源本/texts/道德经溯源本字词释意.md
+++ b/道德经溯源本/texts/道德经溯源本字词释意.md
@@ -183,6 +183,10 @@
 
 - 达到填满所需求量的状态
 
+## 餘
+
+- 具有额外的数量
+
 ## 憯
 
 - 惨痛
@@ -242,7 +246,27 @@
 
 - 显露
 
+## 賢
 
+- 在人类中上等价值的能力
 
+## 弱
+
+- 消弱
+- 能力不足
+
+## 強
+
+- 硬
+- 硬来
+- 加固
+
+## 動
+
+- 事件发生
+
+## 用
+
+- 以…为实现意图的手段
 
 
