完成「負、抱、陰、陽、中、氣、勿或、夕、良、學」释意

--- a/道德经溯源本/texts/道德经溯源本字词释意.md
+++ b/道德经溯源本/texts/道德经溯源本字词释意.md
@@ -270,4 +270,51 @@
 
 - 以…为实现意图的手段
 
+## 負
+
+- 具有
+
+## 抱
+
+- 展开追求
+
+## 陰
+
+- 需求方
+
+## 陽
+
+- 被需求方
+
+## 中
+
+- 相遇
+
+## 氣
+
+- 看不见却非真空的存在
+- 呼吸（引申）
+
+## 勿或
+
+- 不过是
+
+## 夕
+
+- 「朝」的对应字
+
+## 良
+
+- 好的
+
+## 學
+
+- 获得知识、技能、经验、教训、警示
+
+
+
+
+
+
+
 
