--- a/道德经溯源本/texts/道德经溯源本字词释意.md
+++ b/道德经溯源本/texts/道德经溯源本字词释意.md
@@ -76,6 +76,11 @@
 
 - 人类系统中的方式
 
+## 道
+
+- 规律空间
+- 方式
+
 ## 利
 
 - 满足需求
@@ -139,6 +144,10 @@
   - 融所有：混合原本维度中的所有
   - 入不现：在原本维度中，混合的效果是进入原本维度中的所有虽然仍然存在却无一显现（最低限度：不凸显）
   - 出另：在新的维度中，混合的效果是产生出与之前维度中不同的另外的存在
+
+## 恆道
+
+- 恆中的规律空间
 
 ## 同
 
