新增19-56与36-71注释，并更新epub版本号

--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -955,6 +955,10 @@
 
 因此，圣人之所以（思维上）健康，是因为其以（思维上）不健康为不健康，因此才不会（思维上）不健康。
 
+```
+19-56与36-71本应为同一篇的前后两部分，被后人拆开后插入其他句子成为两篇。
+```
+
 <div style="text-align: right;">释<i>吾言、我、聖人</i> 35-70</div>
 
 > 吾言甚易知也 甚易行也 而人莫之能知也 而莫之能行也
