--- a/道德经溯源本/texts/道德经溯源本.md
+++ b/道德经溯源本/texts/道德经溯源本.md
@@ -2,7 +2,215 @@
 
 *老子 · Liwei Zhang*
 
-## 开篇与提要
+## 无篇章隔断版
+
+信言不美 美言不信 知者不博 博者不知 善者不多 多者不善
+
+聖人无積 既以爲人 己愈有 既以予人 己愈多
+
+故天之道 利而不害 人之道 爲而弗爭
+
+天下皆知美 爲美惡已 皆知善 訾不善矣
+
+有无之相生也 難易之相成也 長短之相形也 高下之相盈也 音聲之相和也 先後之相隨 恆也
+
+是以聖人居无爲之事 行不言之教
+
+天下有道 卻走馬以糞 天下无道 戎馬生於郊
+
+罪莫大於可欲 禍莫大於不知足 咎莫憯於欲得
+
+故知足之足 恆足矣
+
+道者 萬物之注也 善人之寳也 不善人之所寳也
+
+美言可以市 尊行可以賀人 人之不善 何棄之有
+
+故立天子 置三卿 雖有共之璧以先四馬 不善坐 而進此
+
+古之所以貴此者何也 不胃求以得 有罪以免輿 故爲天下貴
+
+天下之道 猶張弓者也 高者抑之 下者舉之 有餘者損之 不足者補之
+
+故天之道 損有餘而益不足 人之道 損不足而奉有餘
+
+孰能有餘而有以取奉於天者 唯有道者乎
+
+反也者 道之動也 弱也者 道之用也
+
+道生一 一生二 二生三 三生萬物
+
+萬物負陰而抱陽 中氣以爲和
+
+天下之所惡 唯孤 寡 不穀 而王公以自名也
+
+勿或損之而益 益之而損 故人之所教 夕議而教人
+
+故強良者不得死 我將以爲學父
+
+道可道也 非恆道也
+
+名可名也 非恆名也
+
+无名萬物之始也
+
+有名萬物之母也
+
+故恆无欲也 以觀亓眇 恆有欲也 以觀亓所噭
+
+兩者同出 異名同胃 玄之有玄 眾眇之門
+
+道生之而德畜之 物形之而器成之
+
+是以萬物尊道而貴德
+
+道之尊也 德之貴也 夫莫之爵也 而恆自然也
+
+道生之 畜之 長之 遂之 亭之 毒之 養之 覆之
+
+生而弗有也 爲而弗恃也 長而弗宰也 此之謂玄德
+
+上德不德 是以有德 下德不失德 是以无德
+
+上德无爲 而无以爲也 上仁爲之 而无以爲也 上義爲之 而有以爲也 上禮爲之 而莫之應也 則攘臂而扔之
+
+故失道而后德 失德而后仁 失仁而后義 失義而后禮 夫禮者 忠信之泊也 而亂之首也
+
+前識者 道之華也 而愚之首也
+
+是以大丈夫居亓厚而不居亓泊 居亓實而不居亓華 故去彼取此
+
+含德之厚者 比於赤子 蜂蠆虺蛇弗螫 攫鳥猛獸弗搏 骨弱筋柔而握固 未知牝牡之合而朘怒 精之至也 終日號而不嚘 和之至也
+
+和曰常 知和曰明 益生曰祥 心使氣曰強
+
+物壯即老 謂之不道 不道早已
+
+人之生也柔弱 亓死也恆仞堅強 萬物草木之生也柔脆 亓死也枯槁
+
+故曰 堅強者 死之徒也 柔弱微細 生之徒也
+
+兵強則不勝 木強則恆
+
+強大居下 柔弱微細居上
+
+出生 入死
+
+生之徒十有三 死之徒十有三 而民生生 動皆之死地之十有三
+
+夫何故也 以亓生生也
+
+蓋聞善攝生者 陵行不辟兕虎 入軍不被甲兵 兕无所椯亓角 虎无所措亓爪 兵无所容亓刃
+
+夫何故也 以亓无死地焉
+
+天長地久 天地之所以能長且久者 以亓不自生也 故能長生
+
+是以聖人芮亓身而身先 外亓身而身存
+
+不以亓无私輿 故能成亓私
+
+聖人恆无心 以百姓之心爲心
+
+善者善之 不善者亦善之 德善也
+
+信者信之 不信者亦信之 德信也
+
+聖人之在天下 歙歙焉 爲天下渾心 百姓皆屬耳目焉 聖人皆咳之
+
+執大象 天下往 往而不害 安平大
+
+樂與餌 過格止
+
+故道之出言也 曰淡呵亓无味也 視之不足見也 聽之不足聞也 用之不可既也
+
+上士聞道 堇而行之 中士聞道 若存若亡 下士聞道 大笑之 弗笑 不足以爲道
+
+是以建言有之曰 明道如費 進道如退 夷道如纇 上德如浴 大白如辱 廣德如不足 建德如偷 質真如渝 大方无隅 大器免成 大音希聲 天象无形 道殷无名
+
+夫唯道 善始且善成
+
+上善治水 水善利萬物而有靜 居眾之所惡 故幾於道矣
+
+居善地 心善淵 予善天 言善信 正善治 事善能 動善時
+
+夫唯不爭 故无尤
+
+爲學者日益 聞道者日損 損之又損 以至於无爲 无爲而无不爲
+
+將欲取天下也 恆无事 及亓有事也 不足以取天下
+
+人之饑也 以亓取食稅之多也 是以飢
+
+百姓之不治也 以亓上有以爲也 是以不治
+
+民之輕死 以亓求生之厚也 是以輕死
+
+夫唯无以生爲者 是賢貴生
+
+爲无爲 事无事 味无味
+
+大小多少 報怨以德
+
+圖難乎亓易也 爲大乎亓細也 天下之難作於易 天下之大作於細
+
+是以聖人終不爲大 故能成亓大
+
+夫輕諾必寡信 多易必多難
+
+是以聖人猷難之 故終於无難
+
+不上賢 使民不爭 不貴難得之貨 使民不爲盜 不見可欲 使民不亂
+
+是以聖人之治也 虛亓心 實亓腹 弱亓志 強亓骨
+
+恆使民无知无欲也 使夫知不敢 弗爲而已 則无不治矣
+
+小邦寡民
+
+使十百人之器毋用 使民重死而遠徙 有車周无所乘之 有甲兵无所陳之 使民復結繩而用之
+
+甘亓食 美亓服 樂亓俗 安亓居
+
+鄰邦相望 雞狗之聲相聞 民至老死 不相往來
+
+治大國 若烹小鮮
+
+以道立天下 亓鬼不神 非亓鬼不神也 亓神不傷人也 非亓神不傷人也 聖人亦弗傷也
+
+夫兩不相傷 故德交歸焉
+
+不出於戶 以知天下 不窺於牖 以知天道
+
+亓出也彌遠 亓知也彌少
+
+是以聖人不行而知 不見而名 弗爲而成
+
+知者弗言 言者弗知
+
+塞亓兌 閉亓門 和亓光 同亓塵 挫亓銳 解亓紛 是謂玄同
+
+知不知 尚矣 不知不知 病矣
+
+是以聖人之不病 以亓病病也 是以不病
+
+吾言甚易知也 甚易行也 而人莫之能知也 而莫之能行也
+
+言有君 事有宗 夫唯无知也 是以不我知
+
+知我者希 則我貴矣 是以聖人被褐而懷玉
+
+善建者不拔 善抱者不脫 子孫以祭祀不絕
+
+修之身 亓德乃真 修之家 亓德有餘 修之鄉 亓德乃長 修之邦 亓德乃豐 修之天下 亓德乃博
+
+以身觀身 以家觀家 以鄉觀鄉 以邦觀邦 以天下觀天下
+
+吾何以知天下然茲 以此
+
+## 分章版
+
+### 开篇与提要
 
 <div style="text-align: right;">显露<i>天之道</i>在前、<i>人之道</i>在后的全经经文顺序 31-81</div>
 
@@ -28,7 +236,7 @@
 
 > 故知足之足 恆足矣
 
-## 道
+### 道
 
 <div style="text-align: right;">释<i>道、寳</i> 25-62</div>
 
@@ -76,7 +284,7 @@
 
 > 兩者同出 異名同胃 玄之有玄 眾眇之門
 
-## 德
+### 德
 
 <div style="text-align: right;">释<i>德、玄德</i> 14-51</div>
 
@@ -150,7 +358,7 @@
 
 > 聖人之在天下 歙歙焉 爲天下渾心 百姓皆屬耳目焉 聖人皆咳之
 
-## 天下
+### 天下
 
 <div style="text-align: right;">释<i>道之出言</i> 79-35</div>
 
@@ -232,7 +440,7 @@
 
 > 夫兩不相傷 故德交歸焉
 
-## 知圣
+### 知圣
 
 <div style="text-align: right;">10-47</div>
 
@@ -262,7 +470,7 @@
 
 > 知我者希 則我貴矣 是以聖人被褐而懷玉
 
-## 尾声寄语
+### 尾声寄语
 
 <div style="text-align: right;">17-54</div>
 
