更正标记删除符号用法

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1044,7 +1044,7 @@
 
 > 是以聖人居无爲之事 行不言之教
 
-<del>> 萬物 作而弗始也 爲而弗恃也 成功而弗居也 夫唯弗居 是以弗去</del>
+> <del>萬物 作而弗始也 爲而弗恃也 成功而弗居也 夫唯弗居 是以弗去</del>
 
 对于任何事物，要从事的话，就不要从启动的那部分着手；要行动的话，就不要依赖行动，而要以目标为本；要达成目标的话，就不要放不下成果。只有放下了，才不会失去。
 
