更正 52-8「爭」应为「靜」，并新增与重写相关解释，更新epub版本号

--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1124,7 +1124,7 @@
 
 居则善于选择地点；思维则善于深广；给出则善于符合、顺应其所处的子规律空间；表达则善于有信用；为政则善于治；做事则善于有能力；动则善于在时机完美时发生。
 
-> 夫唯不爭 故无尤
+> 夫唯不靜 故无尤
 
 只有不争，因而杜绝遭受由过失招致的灾祸。
 
