--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -780,15 +780,39 @@
 - 《道德经》中，政（正）是一大主题；水是核心比喻之一；治水是高难度的。
 - 另篇中对水有「以亓无以易之」的描述。说明水像道一样具有不可移除性。唯一的应对方式是治。
 - 另篇中「不善坐 而進此」，「善」在帛书乙本中被替换为「若」。此处，乙本以「如」替换「治」。「若」、「如」同意，两处皆以此意近音字替换。
+
+「靜」：
+- 青 + 争
+- 生 + 丹/井 + 争
+- 生是道的一大特征。
+- 该字可表示两个不同的含意：静、争。
+- 此处该字同时兼具两种含义。
+- 靜，为表达的表层，以合乎于道的特征（也是水的一种状态）。
+- 争，为表达内层，以注明水的另一种状态。
+
+「有靜」：
+- 指出水具有静、争两种状态的能力。
+- 指出水具有生的效应。
 ```
 
 > 居善地 心善淵 予善天 言善信 正善治 事善能 動善時
 
 居则善于选择地点；思维则善于深广；给出则善于符合、顺应其所处的子规律空间；表达则善于有信用；为政则善于治；做事则善于有能力；动则善于在时机完美时发生。
 
-> 夫唯不爭 故无尤
+> 夫唯不靜 故无尤
 
-只有不争，因而杜绝遭受由过失招致的灾祸。
+只有水处于不争的状态，才能杜绝遭受由水而来的怨恨、责怪形成的灾祸。
+
+```
+「靜」：
+- 在该处意思：争的状态。
+- 指代水所处的状态。
+
+「尤」：
+- 过失，罪过。
+- 怨恨、责怪。
+- 指代由水而来的怨恨、责怪形成的灾祸。
+```
 
 <div style="text-align: right;">释<i>不足以取天下</i> 11-48</div>
 
