--- a/道德经溯源本/texts/道德经溯源本.md
+++ b/道德经溯源本/texts/道德经溯源本.md
@@ -134,7 +134,7 @@
 
 居善地 心善淵 予善天 言善信 正善治 事善能 動善時
 
-夫唯不爭 故无<mark style="background-color: red; color: white;">尤</mark>
+夫唯不靜 故无<mark style="background-color: red; color: white;">尤</mark>
 
 爲學者日益 聞道者日損 損之又損 以至於无爲 无爲而无不爲
 
@@ -382,7 +382,7 @@
 
 > 居善地 心善淵 予善天 言善信 正善治 事善能 動善時
 
-> 夫唯不爭 故无尤
+> 夫唯不靜 故无尤
 
 <div style="text-align: right;">释<i>不足以取天下</i> 11-48</div>
 
