更正「淵」为「瀟」，根据帛书甲本及此处含意，更新epub版本号

--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -795,7 +795,7 @@
 - 指出水具有生的效应。
 ```
 
-> 居善地 心善淵 予善天 言善信 正善治 事善能 動善時
+> 居善地 心善瀟 予善天 言善信 正善治 事善能 動善時
 
 居则善于选择地点；思维则善于深广；给出则善于符合、顺应其所处的子规律空间；表达则善于有信用；为政则善于治；做事则善于有能力；动则善于在时机完美时发生。
 
