--- a/道德经圣示.md
+++ b/道德经圣示.md
@@ -1120,7 +1120,7 @@
 - 另篇中「不善坐 而進此」，「善」在帛书乙本中被替换为「若」。此处，乙本以「如」替换「治」。「若」、「如」同意，两处皆以此意近音字替换。
 ```
 
-> 居善地 心善淵 予善天 言善信 正善治 事善能 動善時
+> 居善地 心善瀟 予善天 言善信 正善治 事善能 動善時
 
 居则善于选择地点；思维则善于深广；给出则善于符合、顺应其所处的子规律空间；表达则善于有信用；为政则善于治；做事则善于有能力；动则善于在时机完美时发生。
 
