--- a/道德经溯源本/texts/道德经溯源本.md
+++ b/道德经溯源本/texts/道德经溯源本.md
@@ -132,7 +132,7 @@
 
 上善治水 水善利萬物而有靜 居眾之所惡 故幾於道矣
 
-居善地 心善淵 予善天 言善信 正善治 事善能 動善時
+居善地 心善瀟 予善天 言善信 正善治 事善能 動善時
 
 夫唯不靜 故无<mark style="background-color: red; color: white;">尤</mark>
 
