更改标记为「不得死」

--- a/道德经溯源本/texts/道德经溯源本.md
+++ b/道德经溯源本/texts/道德经溯源本.md
@@ -46,7 +46,7 @@
 
 勿或損之而益 益之而損 故人之所教 夕議而教人
 
-故<mark style="background-color: red; color: white;">強良</mark>者不得死 我將以爲學父
+故強良者<mark style="background-color: red; color: white;">不得死</mark> 我將以爲學父
 
 道可道也 非恆道也
 
