更改、新增 5-42「不得死」解释，作相应内容调整，更新epub版本号

--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -220,10 +220,6 @@
 
 <div style="text-align: right;">5-42</div>
 
-```
-该篇是声色俱厉地警告人类中的尖端。
-```
-
 > 反也者 道之動也 弱也者 道之用也
 
 起到反向效用的，是道（规律空间）的作为；起到消弱效用的，是道的规矩与约束所驱使的。
@@ -289,15 +285,23 @@
 
 > 故強良者不得死 我將以爲學父
 
-所以，硬要搞这种独一份的人死无葬生之地，我要把他们作为令人生畏的反面教材。
+所以，硬要搞这种独一份注定无法实现，我要把他们作为教材。
 
 ```
 「强」：硬要、硬来
 
 「良」：其认为是好的、不可被中和的单极。
 
+「不得死」：
+- 「萬物負陰而抱陽」：死对生。
+- 无生，自然无死。
+- 要硬搞一个没有「負陰而抱陽」的存在。这种要搞的东西是不存在的。
+- 既然无生，当然无死，因此：不得死。
+- 另外一种表达是：不得生。
+- 引申：不得逞。
+
 「學父」：令人恭敬的学习对象。但这只是表面表达。实际上恭敬是因为：
-- 后果恐怖而令人生畏。
+- 后果无生无死。
 - 骇人的话要包裹在高档的糖纸里才能说（此段用「良」字也有一层类似的考虑）。
 ```
 
