添加 3-41「是以建言有之曰…」注释，并更新epub版本号

--- a/道德经溯源本/texts/道德经圣示溯源本.md
+++ b/道德经溯源本/texts/道德经圣示溯源本.md
@@ -764,6 +764,19 @@
 
 因此，有这么一种说法：在道的知识上了解如同不了解；在道的知识上增进如同减退；在道的知识上通透如同费解；上等的德如同渊谷；彻底的干净如同污浊；广泛的德如同狭隘；构造的德如同抄袭；质地本真如同变质；彻底的方如同没有角落；宇宙中的大能工具是现成的；宇宙中的大能信息是人类几乎没有能力接收的；宇宙层面的象的出现是无法通过物质捕捉到的；道浓密的所在是没有名字的。
 
+```
+「明道如費 進道如退 夷道如纇 上德如浴 大白如辱 廣德如不足 建德如偷 質真如渝 大方无隅 大器免成」：能力水平降序排列。
+- 降序结构分块上对应「道生之而德畜之 物形之而器成之」。
+- 道、德、物、形、器。
+- 「明道如費 進道如退 夷道如纇」对应「道」：对道的把握能力水平。
+- 「上德如浴 大白如辱 廣德如不足 建德如偷」对应「德」：对德的把握能力水平。
+- 「質真如渝」对应「物」。
+- 「大方无隅」对应「形」。
+- 「大器免成」对应「器」。
+
+「大音希聲 天象无形 道殷无名」：从离人类最近的到最远的升序排列。
+```
+
 > 夫唯道 善始且善成
 
 只有道，既善于起始，又善于完成。
