初步构建「长门一：味无味」

--- a/道德经溯源本/texts/不绝长门经.md
+++ b/道德经溯源本/texts/不绝长门经.md
@@ -39,3 +39,21 @@
 修之邦，国家不绝。
 
 修之天下，天下不绝。
+
+## 长门一：味无味
+
+老子有言：
+
+> 故道之出言也 曰淡呵亓无味也 視之不足見也 聽之不足聞也 用之不可既也
+
+又言：
+
+> 爲學者日益 聞道者日損
+
+再言：
+
+> 味无味
+
+道之出言无味。闻道者味无味。
+
+无味有三：老子所言、道之所至、尊贵之恒自然。
