初步完成 「长门二：事无事」综述

--- a/道德经溯源本/texts/不绝长门经.md
+++ b/道德经溯源本/texts/不绝长门经.md
@@ -59,3 +59,23 @@
 道之出言无味。闻道者味无味。
 
 无味有三：老子所言、道之所至、尊贵之恒自然。
+
+## 长门二：事无事
+
+老子有言：
+
+> 罪莫大於可欲 禍莫大於不知足 咎莫憯於欲得
+> 故知足之足 恆足矣
+> 道者 … 善人之寳也 … 有罪以免輿
+
+事无事以不入劫。人有一难二劫。
+
+可欲，罪也，有免也，难也。
+
+不知足，劫一。欲得，劫二。
+
+可欲，由外及内而罪生也。不知足，度内以外而危难至也。欲得，内生外衍而责罚施也。
+
+罪生尚有免，危难至则不去，责罚施乃无救。
+
+不绝者不益责罚，不入危难，有可欲而善闻道以求免其死。
