更改标点符号

--- a/道德经溯源本/texts/不绝长门经.md
+++ b/道德经溯源本/texts/不绝长门经.md
@@ -8,7 +8,7 @@
 
 > 知我者希 則我貴矣 是以聖人被褐而懷玉
 
-「褐」，表也。「玉」，里也。人之视，止于表。圣人之贵，存于里，而不见于表。是以，「我貴」而「知我者希」。
+「褐」，表也。「玉」，里也。人之视，止于表。圣人之贵，存于里，而不见于表。是以「我貴」而「知我者希」。
 
 故：「我」，圣人。
 
