新增「鬼神」道者部分

--- a/道德经溯源本/texts/不绝长门经.md
+++ b/道德经溯源本/texts/不绝长门经.md
@@ -26,6 +26,15 @@
 
 是以神通益人所欲得，人益鬼之不绝。
 
+老子有言：
+
+> 故天之道 損有餘而益不足 人之道 損不足而奉有餘
+> 孰能有餘而有以取奉於天者 唯有道者乎
+
+人欲延年，鬼求不绝。人以其短奉鬼之长。
+
+道者不绝而以其长益不足之短。人之不绝乃有以为矣。
+
 ## 长门
 
 不绝，即长久，即长生久存，即不泯于众人所绝处。
