添加「圣言」求取

--- a/道德经溯源本/texts/不绝长门经.md
+++ b/道德经溯源本/texts/不绝长门经.md
@@ -67,7 +67,13 @@
 
 道之出言无味。闻道者味无味。
 
-无味有三：老子所言、道之所至、尊贵之恒自然。
+无味有三：老圣所言、道之所至、尊贵之恒自然。
+
+学易者得圣言，散之、乱之、形之、扩之。
+
+圣言难复而可溯。
+
+故欲取圣言者，知圣示、识其易、通其形、去其浊、循其宗、溯其本。
 
 ## 长门二：事无事
 
