初步完成「无味有三：老圣所言」部分

--- a/道德经溯源本/texts/不绝长门经.md
+++ b/道德经溯源本/texts/不绝长门经.md
@@ -69,11 +69,19 @@
 
 无味有三：老圣所言、道之所至、尊贵之恒自然。
 
-学易者得圣言，散之、乱之、形之、扩之。
+长门者，不存于人世，人无所知、不知寻，唯圣言以字陈之。
 
-圣言难复而可溯。
+易者，鬼之所予，人之所好，鬼以为人，世代之显学也。学易者得圣言，散之、乱之、形之、扩之、味之、易之。
 
-故欲取圣言者，知圣示、识其易、通其形、去其浊、循其宗、溯其本。
+是以圣言难复而可溯。
+
+欲取圣言者，知圣示、识其易、通其形、去其浊、循其宗、溯其本。
+
+既露圣言，不绝可观，长门可觅。
+
+圣言愈读，长门愈显，诸界愈见，不绝愈信，人世愈浅。
+
+故老圣所言，闻道者重读以为宗。
 
 ## 长门二：事无事
 
