初步完成「无味有三：道之所至」部分

--- a/道德经溯源本/texts/不绝长门经.md
+++ b/道德经溯源本/texts/不绝长门经.md
@@ -83,6 +83,22 @@
 
 故老圣所言，闻道者重读以为宗。
 
+圣言：
+
+> 道可道也 非恆道也
+> …
+> 故恆无欲也 以觀亓眇 恆有欲也 以觀亓所噭
+
+可道者，人可及之也。
+
+恒者，人终不可及之也。
+
+无欲者，无以为也。有欲者，有以为也。
+
+恒者无以为，以其眇观之。恒者有以为，以其所噭观之。
+
+故道之所至，闻道者以善观为能。
+
 ## 长门二：事无事
 
 圣言：
