初步完成「无味有三：尊贵之恒自然」部分

--- a/道德经溯源本/texts/不绝长门经.md
+++ b/道德经溯源本/texts/不绝长门经.md
@@ -99,6 +99,20 @@
 
 故道之所至，闻道者以善观为能。
 
+圣言：
+
+> 道生之而德畜之 物形之而器成之
+> 是以萬物尊道而貴德
+> 道之尊也 德之貴也 夫莫之爵也 而恆自然也
+
+道尊德贵之恒自然亦道矣。
+
+闻道者味之以明所向。所向既明，不绝之志有其实。
+
+圣言：
+
+> 是以大丈夫居亓厚而不居亓泊 居亓實而不居亓華 故去彼取此
+
 ## 长门二：事无事
 
 圣言：
